Update SVN_REV, PACKAGE_VERSION and LIB_VERSION variables

--- a/Makefile.am
+++ b/Makefile.am
@@ -125,3 +125,9 @@ ifnames:
 	echo "Defines printed to ifnames.log"
 
 spec.tmpl.in:
+
+# You net to export/setenv ${DEBEMAIL}
+deb:
+	checkinstall -D -y --install=no --pkgname=${PACKAGE_NAME} --pkgversion=${PACKAGE_VERSION} --arch=${build_cpu} --pkglicense=GPL --maintainer=${DEBEMAIL} --reset-uids=yes --pakdir=/usr/local/apt/archives/binary --requires=pdp-qt,pdp-coin,pdp-soqt --include=/usr/local/lib/libpdp-4.0.so.0,/usr/local/lib/libtacss-4.0.so.0
+
+#	dpkg-scanpackages /usr/local/apt/archives/binary /dev/null | gzip -9c > /usr/local/apt/archives/binary/Packages.gz
