--- a/src/bp/Makefile.am
+++ b/src/bp/Makefile.am
@@ -28,23 +28,23 @@ include $(top_srcdir)/mfstamp.am
 
 noinst_LTLIBRARIES =\
 	libbp_TypeAccess@PDP_SUFFIX@.la \
-	libbp@PDP_SUFFIX@@PDP_VERSION@.la
+	libbp@PDP_SUFFIX@_@PACKAGE_VERSION@.la
 
-libbp@PDP_SUFFIX@@PDP_VERSION@_la_SOURCES = $(HEADS) $(SRCS)
+libbp@PDP_SUFFIX@_@PACKAGE_VERSION@_la_SOURCES = $(HEADS) $(SRCS)
 
-libbp@PDP_SUFFIX@@PDP_VERSION@_la_CPPFLAGS = @PDP_INCLUDES@
-libbp@PDP_SUFFIX@@PDP_VERSION@_la_CXXFLAGS = @OPT_LEVEL@
+libbp@PDP_SUFFIX@_@PACKAGE_VERSION@_la_CPPFLAGS = @PDP_INCLUDES@
+libbp@PDP_SUFFIX@_@PACKAGE_VERSION@_la_CXXFLAGS = @OPT_LEVEL@
 
-libbp@PDP_SUFFIX@@PDP_VERSION@_la_LIBADD = libbp_TypeAccess@PDP_SUFFIX@.la
+libbp@PDP_SUFFIX@_@PACKAGE_VERSION@_la_LIBADD = libbp_TypeAccess@PDP_SUFFIX@.la
 
-libbp@PDP_SUFFIX@@PDP_VERSION@_la_DEPENDENCIES = libbp_TypeAccess@PDP_SUFFIX@.la
+libbp@PDP_SUFFIX@_@PACKAGE_VERSION@_la_DEPENDENCIES = libbp_TypeAccess@PDP_SUFFIX@.la
 
 libbp_TypeAccess@PDP_SUFFIX@_la_SOURCES =\
 	bp_TA.cpp \
 	bp_TA_type.h \
 	bp_TA_inst.h
 
-libbp_TypeAccess@PDP_SUFFIX@_la_CPPFLAGS = $(libbp@PDP_SUFFIX@@PDP_VERSION@_la_CPPFLAGS)
+libbp_TypeAccess@PDP_SUFFIX@_la_CPPFLAGS = $(libbp@PDP_SUFFIX@_@PACKAGE_VERSION@_la_CPPFLAGS)
 
 libbp_TypeAccess@PDP_SUFFIX@_la_CXXFLAGS = -O0
 
