--- a/src/css/Makefile.am
+++ b/src/css/Makefile.am
@@ -62,9 +62,9 @@ make_css_parse:
 	sed -e "s/union/struct/g" y.tab.c >css_parse.cpp;
 	sed -e "s/union/struct/g" y.tab.h >css_parse.h;
 
-noinst_LTLIBRARIES = libcss@PDP_SUFFIX@@PDP_VERSION@.la
-libcss@PDP_SUFFIX@@PDP_VERSION@_la_SOURCES = $(HEADS) $(SRCS)
-libcss@PDP_SUFFIX@@PDP_VERSION@_la_CPPFLAGS = @PDP_INCLUDES@
-libcss@PDP_SUFFIX@@PDP_VERSION@_la_CXXFLAGS = @OPT_LEVEL@
+noinst_LTLIBRARIES = libcss@PDP_SUFFIX@_@PACKAGE_VERSION@.la
+libcss@PDP_SUFFIX@_@PACKAGE_VERSION@_la_SOURCES = $(HEADS) $(SRCS)
+libcss@PDP_SUFFIX@_@PACKAGE_VERSION@_la_CPPFLAGS = @PDP_INCLUDES@
+libcss@PDP_SUFFIX@_@PACKAGE_VERSION@_la_CXXFLAGS = @OPT_LEVEL@
 
 cssdef.h:
