--- a/src/leabra/Makefile.am
+++ b/src/leabra/Makefile.am
@@ -36,18 +36,18 @@ include $(top_srcdir)/mfstamp.am
 
 noinst_LTLIBRARIES =\
 	libleabra_TypeAccess@PDP_SUFFIX@.la \
-	libleabra@PDP_SUFFIX@@PDP_VERSION@.la
+	libleabra@PDP_SUFFIX@_@PACKAGE_VERSION@.la
 
-libleabra@PDP_SUFFIX@@PDP_VERSION@_la_SOURCES = $(HEADS) $(SRCS)
-libleabra@PDP_SUFFIX@@PDP_VERSION@_la_CPPFLAGS = @PDP_INCLUDES@
-libleabra@PDP_SUFFIX@@PDP_VERSION@_la_CXXFLAGS = @OPT_LEVEL@
-libleabra@PDP_SUFFIX@@PDP_VERSION@_la_LIBADD = libleabra_TypeAccess@PDP_SUFFIX@.la
-libleabra@PDP_SUFFIX@@PDP_VERSION@_la_DEPENDENCIES = libleabra_TypeAccess@PDP_SUFFIX@.la
+libleabra@PDP_SUFFIX@_@PACKAGE_VERSION@_la_SOURCES = $(HEADS) $(SRCS)
+libleabra@PDP_SUFFIX@_@PACKAGE_VERSION@_la_CPPFLAGS = @PDP_INCLUDES@
+libleabra@PDP_SUFFIX@_@PACKAGE_VERSION@_la_CXXFLAGS = @OPT_LEVEL@
+libleabra@PDP_SUFFIX@_@PACKAGE_VERSION@_la_LIBADD = libleabra_TypeAccess@PDP_SUFFIX@.la
+libleabra@PDP_SUFFIX@_@PACKAGE_VERSION@_la_DEPENDENCIES = libleabra_TypeAccess@PDP_SUFFIX@.la
 libleabra_TypeAccess@PDP_SUFFIX@_la_SOURCES =\
 	leabra_TA.cpp \
 	leabra_TA_type.h \
 	leabra_TA_inst.h
-libleabra_TypeAccess@PDP_SUFFIX@_la_CPPFLAGS = $(libleabra@PDP_SUFFIX@@PDP_VERSION@_la_CPPFLAGS)
+libleabra_TypeAccess@PDP_SUFFIX@_la_CPPFLAGS = $(libleabra@PDP_SUFFIX@_@PACKAGE_VERSION@_la_CPPFLAGS)
 libleabra_TypeAccess@PDP_SUFFIX@_la_CXXFLAGS = -O0
 
 leabra_def.h:
