--- a/plugins/Makefile
+++ b/plugins/Makefile
@@ -1,10 +1,21 @@
 CD = cd
 
-all: 
+all: qmake
 	@echo " "
 	@echo "** Doing ($@) in all plugin directories**"
 	@echo " "
-	@for i in * ;\
+	@for i in tacss/* ;\
+	do \
+	  if [ -d $$i ] ;\
+	  then \
+	    echo $$i; \
+	    $(CD) $$i;\
+	    if ( $(MAKE) ) then echo "* Successfully ran make in $$i";\
+	    else exit 1; fi;\
+	    $(CD) ../;\
+	  fi; \
+	done
+	@for i in pdp/* ;\
 	do \
 	  if [ -d $$i ] ;\
 	  then \
@@ -23,7 +34,18 @@ clean:
 	@echo " "
 	@echo "** Doing ($@) in all plugin directories**"
 	@echo " "
-	@for i in * ;\
+	@for i in tacss/* ;\
+	do \
+	  if [ -d $$i ] ;\
+	  then \
+	    echo $$i; \
+	    $(CD) $$i;\
+	    if ( $(MAKE) $@; ) then echo "* Successfully made $@ in $$i";\
+	    else exit 1; fi;\
+	    $(CD) ../;\
+	  fi; \
+	done
+	@for i in pdp/* ;\
 	do \
 	  if [ -d $$i ] ;\
 	  then \
@@ -42,7 +64,18 @@ qmake:
 	@echo " "
 	@echo "** Doing ($@) in all plugin directories**"
 	@echo " "
-	@for i in * ;\
+	@for i in tacss/* ;\
+	do \
+	  if [ -d $$i ] ;\
+	  then \
+	    echo $$i; \
+	    $(CD) $$i;\
+	    if ( qmake; ) then echo "* Successfully ran $@ in $$i";\
+	    else exit 1; fi;\
+	    $(CD) ../;\
+	  fi; \
+	done
+	@for i in pdp/* ;\
 	do \
 	  if [ -d $$i ] ;\
 	  then \
