css now passes the "bibtex_lib" test -- I wrote a fairly extensive set of bibtex processing code, and found that it didn't work for several reasons with the new css.  one involved a very nasty if else if.. parsing error.  also some bugs in the ReadLine function.  Anyway, this provides a very good indication that all is now working with css!

--- a/src/css/Makefile.am
+++ b/src/css/Makefile.am
@@ -60,7 +60,8 @@ include $(top_srcdir)/mfstamp.am
 make_css_parse:
 	bison -dtvy css_parse.y;
 	sed -e "s/union/struct/g" y.tab.c >css_parse.cpp;
-	sed -e "s/union/struct/g" y.tab.h >css_parse.h;
+	sed -e "s/union/struct/g" y.tab.h >css_parse.hxx;
+	cmp css_parse.hxx css_parse.h || cp css_parse.hxx css_parse.h;
 
 noinst_LTLIBRARIES = libcss@PDP_SUFFIX@_@PACKAGE_VERSION@.la
 libcss@PDP_SUFFIX@_@PACKAGE_VERSION@_la_SOURCES = $(HEADS) $(SRCS)
