all test files convered and some 3.2 conversion bugs fixed and everything tested!

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -4,15 +4,13 @@ dist_pkgdata_test_DATA =\
 	12ax4s_demo.proj \
 	SimpleLines5x5.dtbl \
 	random_assoc_5x5_25.dtbl \
-	hv.v4good_05_20_06_v4_cvt.proj \
-	hv.v4_adaptnetin.proj \
 	leabra_startup.css \
 	toaster.jpg \
 	giraffe.jpg \
 	imgproc_test.proj \
 	xor.proj \
 	12ax4s_demo_v4_cvt.proj \
-	hv.v4good_05_20_06.proj \
 	leabra_ra.proj \
 	ra3_2.proj \
-	xor_old.proj
+	xor_old.proj \
+	model_and_task_v4.proj
