--- a/configure.ac
+++ b/configure.ac
@@ -39,8 +39,7 @@ AC_DEFINE_DIR([LIB_VERSION],[LIB_VERSION]) # Co-opting this macro
 SIM_AC_CONFIGURATION_SETTING([PDP++ binary version],[${PACKAGE_VERSION}])
 SIM_AC_CONFIGURATION_SETTING([TA/CSS library version],[${LIB_VERSION}])
 
-# If you need universal binaries, please send us an email
-# SIM_AC_UNIVERSAL_BINARIES 
+SIM_AC_UNIVERSAL_BINARIES 
 
 AC_PREREQ([2.59])                                      dnl Autoconf 2.59 required
 AC_COPYRIGHT([
